--- a/Tracer/Tracer.vcxproj
+++ b/Tracer/Tracer.vcxproj
@@ -19,7 +19,6 @@
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Input.cpp" />
-    <ClCompile Include="InputUtils.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -87,10 +86,12 @@
     <ClInclude Include="RendererFlatColor.h" />
     <ClInclude Include="RendererRayTrace.h" />
     <ClInclude Include="RendererRayTraceCPU.h" />
+    <ClInclude Include="RenderingUtils.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Structs.h" />
+    <ClInclude Include="ThreadingUtils.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils.h" />
@@ -108,6 +109,7 @@
     <ClInclude Include="vendor\tinyobj\tiny_obj_loader.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowCB.h" />
+    <ClInclude Include="WindowUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\bloom.fs" />
@@ -161,7 +163,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir)lib\glfw-3.3.2.bin.WIN32\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)lib\glfw-3.3.2.bin.WIN32\lib-vc2019;$(LibraryPath)</LibraryPath>
-    <TargetName>Surge</TargetName>
+    <TargetName>Ray-Tracer</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
