--- a/Tracer/Tracer.vcxproj
+++ b/Tracer/Tracer.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Octree.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Renderer.cpp" />
@@ -30,6 +31,7 @@
     <ClCompile Include="RendererFlatColor.cpp" />
     <ClCompile Include="RendererRayTrace.cpp" />
     <ClCompile Include="RendererRayTraceCPU.cpp" />
+    <ClCompile Include="RendererRayTraceVulkan.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shape.cpp" />
@@ -82,6 +84,7 @@
     <ClInclude Include="InputUtils.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Octree.h" />
     <ClInclude Include="Physics.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="Renderer.h" />
@@ -89,6 +92,7 @@
     <ClInclude Include="RendererFlatColor.h" />
     <ClInclude Include="RendererRayTrace.h" />
     <ClInclude Include="RendererRayTraceCPU.h" />
+    <ClInclude Include="RendererRayTraceVulkan.h" />
     <ClInclude Include="RenderingUtils.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
